// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionItemBody renders correctly with different className 1`] = `
<div
  aria-hidden={true}
  className="testCSSClass boldrui-accordion__body--hidden"
  id={undefined}
  role={undefined}
>
  <div>
    Fake body
  </div>
</div>
`;

exports[`AccordionItemBody renders correctly with expanded 1`] = `
<div
  aria-hidden={false}
  className="boldrui-accordion__body"
  id={undefined}
  role={undefined}
>
  <div>
    Fake body
  </div>
</div>
`;

exports[`AccordionItemBody renders correctly with min params 1`] = `
<div
  aria-hidden={true}
  className="boldrui-accordion__body boldrui-accordion__body--hidden"
  id={undefined}
  role={undefined}
>
  <div>
    Fake body
  </div>
</div>
`;

exports[`AccordionItemBody renders correctly with prefixClass 1`] = `
<div
  aria-hidden={true}
  className="boldrui-accordion__body testCSSClass--hidden"
  id={undefined}
  role={undefined}
>
  <div>
    Fake body
  </div>
</div>
`;
